force-app/main/default/objects/Trust__c/Trust__c.object-meta.xml
<CustomObject>
    <description>A Trust Escrow account that belongs to a specific account for billing</description>
    <label>Trust</label>
    <nameField>
        <label>Trust Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trusts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>