force-app/main/default/objects/Trust__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <description>File number that is related to the trust</description>
    <label>File Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>