force-app/main/default/objects/Trust__c/fields/Total_Amount_In_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_In_Escrow__c</fullName>
    <label>Total Amount In Escrow</label>
    <summarizedField>Trust_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Trust_Line_Item__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>