force-app/main/default/objects/Trust__c/fields/Trusts_Account__c.field-meta.xml
<CustomField>
    <fullName>Trusts_Account__c</fullName>
    <description>The Account that the escrow is for</description>
    <label>Trust&apos;s Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts</relationshipLabel>
    <relationshipName>Trusts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>