force-app/main/default/objects/Trust__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Buyer Desposit</fullName>
            </value>
            <value>
                <fullName>Escrow Holdback</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
                <isActive>false</isActive>
                <label>Real Estate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>